# learning_stuff

./: .gitignore  1.html  2.html  README.md  package-lock.json  package.json  postcss.config.js  webpack.config.js
alpine-spa-sample/: Dockerfile  docker-compose.yml
alpine-spa-sample/public/: index.html
climb/: top.html
climb/bootstrap-admin/: index.html
climb/bootstrap-custom/: cheatsheet.js  header.html  header.js  index.html  main.js  package-lock.json  package.json  postcss.config.js  style.scss  vite.config.js
dl/coco/: anno.py
dl/homography/: homography.py
dl/mm/: data_convert_pet.py
dl/mnist/: 2cat.py  a.onnx  lit.py  main.py  net.py  readme.txt  test.ipynb  test.py
dl/msra/: dataloader.py  demo.py  export2coco.py  main.py  my_dataset_mapper.py  mydatesetmapper.py  readme.txt  rotated_faster_rcnn_R_50_FPN_1x.yaml  train_net.py
dl/pet/: 37_demo.py  37_train_net.py  d2_loss_visualization.py  demo.py  main.py  pet37.py  pet37.yaml  pet_faster_rcnn_R_50_FPN_1x.yaml  pet_retinanet_R_50_FPN_1x.yaml  pet_voc_cat_2.py  pet_voc_evaluation.py  predictor.py  readme.txt  t.py  train_net.py
dl/voc/: main.py  voc_faster_rcnn_R_50_FPN_1x.yaml
dl/yolov5/: main.py
docker/flyway/: Dockerfile  README.md  docker-compose.yml
docker/kong/: docker-compose.yml  readme.txt
docker/php-fpm-nginx/: Dockerfile  docker-compose.yml
docker/phpmyadmin/: docker-compose.yml
examples/spotlight/: README.md  spotlight_demo.html
funny/dynamic-image-color/: dynamic-image-color.html  readme.txt
funny/keyboard/: keyboard.html
funny/wave-loading/: index.html  package-lock.json  package.json  readme.txt  style.scss
garfish/: readme.txt
garfish/main-app/: package.json
keyboard/: readme.txt
php-fpm-docker/: Dockerfile  readme.txt
practice/: blue2blond-nl.html
python/fapi-demo/: .env.example  .gitignore  Cargo.toml  Dockerfile  app.py  bootstrap.py  command_scheduler.py  db.py  deps.py  diesel.toml  docker-compose.yml  exception.py  experiment_stuff.py  log.py  main.py  py3.sh  querybuilder.py  reply.py  requirements.txt  run.sh  unicorn.conf.py  uvicorn.json
rust/actix-demo/: .env.example  Cargo.toml
rust/actix-demo/benches/: my_benchmark.rs
rust/actix-demo/src/: lib.rs  main.rs
rust/actix-demo/src/app/: app_context.rs  app_status.rs  db.rs  mod.rs
rust/actix-demo/src/controller/: home_controller.rs  mod.rs  test_controller.rs
rust/actix-demo/src/controller/api/: user_controller.rs
rust/actix-demo/src/ext/: err_code.rs  exception.rs  mod.rs  reply.rs  request_id.rs
rust/actix-demo/src/ext/request_id_middleware/: middleware.rs  mod.rs  root_span_builder.rs  root_span_macro.rs
rust/actix-demo/src/model/: user_model.rs
rust/axum-demo/: .env.example  Cargo.toml
rust/axum-demo/benches/: my_benchmark.rs
rust/axum-demo/hippo/: worker.php
rust/axum-demo/modules/: handler.py
rust/axum-demo/operative/: ope.py  operative.py  spy.pyi
rust/axum-demo/operative/controllers/: test_controller.py  user_controller.py
rust/axum-demo/public/: my.txt
rust/axum-demo/scripts/: entry.py  main.py  ope.py  ope_exception.py  ope_reply.py  ope_thread_pool.py  ope_tracing.py  operative.py  spy_core.pyi
rust/axum-demo/scripts/controllers/: test_controller.py  user_controller.py
rust/axum-demo/src/: action.rs  app.rs  app_fn.rs  config.rs  context.rs  exception.rs  lib.rs  main.rs  reply.rs  request_id.rs
rust/axum-demo/src/controllers/: mod.rs  test_controller.rs
rust/axum-demo/src/hippo/: hippo.rs  hippo_handler.rs  mod.rs  worker.rs
rust/axum-demo/src/py/: handler.rs  mod.rs  rs_core.rs  rspy_core.rs
rust/axum-demo/src/spy/: handler.rs  mod.rs  spy.rs  spy_core.rs  spy_handler.rs
rust/price-index/: Cargo.toml
rust/rocket-demo/: .env.example  .gitignore  Cargo.toml  Rocket.toml
rust/rocket-demo/src/: couter_f.rs  err_code.rs  exception.rs  lib.rs  main.rs  reply.rs  request_id.rs
rust/rocket-demo/src/controllers/: home_controller.rs  mod.rs  test_controller.rs  user_controller.rs
rust/rocket-demo/src/models/: user.rs
saga-app/: .env.development  config-overrides.js  package.json
src/: 1.css  1.js  2.css  2.js  base.css
temp_stuff/: AutoRouter.php  TinyResult.php  netstring.php  usage.php
todo/: todo.txt
vite-demo/: index.html  main.js  package-lock.json  package.json  style.css  windi.config.js
(+111 files in other folders)
