[package]
name = "rocket-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = {version="0.5.0-rc.3", features=["json"]}
cached = "0.44.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio", 
    "macros", 
    "mysql", 
    "uuid", 
    "chrono", 
    "migrate"
]